--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "vue": "latest",
     "vue-i18n": "^9.14.1",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
