--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
     "@nuxtjs/i18n": "^8.5.5",
+    "@nuxtjs/toast": "^3.3.1",
     "nuxt": "^3.13.0",
+    "nuxt-aos": "^1.2.5",
     "sass": "^1.79.3",
     "vue": "latest",
     "vue-i18n": "^9.14.1",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
